syntax = "proto3";

package payment;

option go_package = "payment";


service PaymentService {
  rpc Charge(ChargeReq) returns (ChargeResp) {}
  rpc CancelCharge(CancelChargeReq) returns (CancelChargeResp) {}
  rpc CreatePaymentLog(CreatePaymentLogReq) returns (CreatePaymentLogResp) {}
}

message CreditCardInfo {
  string credit_card_number = 1;
  int32 credit_card_cvv = 2;
  int32 credit_card_expiration_year = 3;
  int32 credit_card_expiration_month = 4;
}

message ChargeReq {
  float amount = 1;
  CreditCardInfo credit_card = 2;
  string order_id = 3;
  uint64 user_id = 4;
}

message ChargeResp {
  string transaction_id = 1;
}
message CancelChargeReq {
  uint64 user_id = 1;
  string order_id = 2;
}
message CancelChargeResp {
  bool success = 1;
}
message CreatePaymentLogReq {
  uint64 user_id = 1;
  string order_id = 2;
  string transaction_id = 3;
  float amount = 4;
}

message CreatePaymentLogResp {
}